- Fixing issue with BaseCard collapse icon not rotating when expanded - Moving Cell Tile UI to its own Card

--- a/ZeldaWorldBuilder/ui/src/index.css
+++ b/ZeldaWorldBuilder/ui/src/index.css
@@ -73,4 +73,8 @@
   .base-field {
     @apply border text-sm py-0.5 px-1 outline-none focus:border-blue-500 shadow-sm w-full;
   }
+
+  .base-card-title {
+    @apply text-gray-900 leading-6;
+  }
 }
